--- a/war/style.css
+++ b/war/style.css
@@ -6,3 +6,28 @@
 .regle{
 float: right;
 }
+
+
+#map {        
+  max-width: 100%;
+  max-height: 100%;
+}
+#map path {
+  fill:#86AAE0;
+  stroke:#FFFFFF;
+  stroke-width:0.6;
+  transition: fill 0.2s, stroke 0.3s;
+}
+#map path:hover {
+  fill: red;
+  stroke: red;
+}
+#map .separator {
+  stroke: #ccc;
+  fill: none;
+  stroke-width:1.5;
+}
+#map .separator:hover {
+  stroke: #ccc;
+  fill: none;
+}
